2/15/12 restore ranges to 0.00.18 (solute=0-1 mol, volume=0.2-1L, concentration=0-5M)
# 0.00.21 (61382) Feb 15, 2012
2/15/12 limit range of concentration display to 0-6 M
# 0.00.20 (61380) Feb 15, 2012
2/15/12 experiment with a different range: solute=0-1 mol, volume=0.1-1 L
# 0.00.19 (61363) Feb 14, 2012
2/14/12 change request: change max solute amount to 1.2 mol, so that max concentration is 6M and all solutes will saturate
2/6/12 add support for zero-volume in Solution (even though we don't currently need it)
2/6/12 #3233, support click-and-drag in slider tracks (ala MacOS and iOS)
# 0.00.18 (60958) Feb 2, 2012
2/2/12 add interviews flavor (with data collection enabled) to build.properties
2/1/12 check in a snapshot of design doc
# 0.00.17 (60823) Jan 31, 2012
1/31/12 dev version after code review changes
1/30/12 #3233, promote beaker label to top-level class
1/30/12 #3233, make BeakerNode an observer of solute and concentration (more extensive changes)
1/30/12 #3233, use ResourceGenerator to create MolarityResources
1/30/12 #3233, use CompositeProperty for solution concentration and precipitate amount (extensive changes!)
1/30/12 #3233, move Symbols out of MolarityResources
1/30/12 #3233, repackage
1/30/12 #3233, click on slider track to change value
1/30/12 #3233, addressed various code review comments
1/30/12 Molarity: Code Review #3233: Added review comments to MolarityModel.java
1/30/12 Molarity: Code Review #3233: Fixed mismatched parens and quotation marks in model.txt and implementation-notes.txt
1/30/12 tweak SolutionNode constructor, we only need to know the max volume of the beaker
1/30/12 added DefaultDecimalFormat.createFormat(int numberOfDecimalPlaces)
1/30/12 created screenshot based on JC's requirements (potassium dichromate, no precipitate)
1/30/12 last pass at doc, in preparation for code review
# 0.00.16 (60693) Jan 26, 2012
1/26/12 change requests; rename project to molarity
1/26/12 wrote implementation-notes.txt