@@ -1,3 +1,4 @@
+2/15/12 change ranges and saturation points: solute=0-1 mol, volume=0.1-1L, concentration=0-6M, Kool-Aid=5.95M, Cobalt nitrate=5.65M, Nickel chloride=5.20M
 2/15/12 restore ranges to 0.00.18 (solute=0-1 mol, volume=0.2-1L, concentration=0-5M)
 # 0.00.21 (61382) Feb 15, 2012
 2/15/12 limit range of concentration display to 0-6 M
